--- a/Style/style.css
+++ b/Style/style.css
@@ -214,7 +214,7 @@ h2.text-black20 {
   font-size: 20px;
   font-weight: bold;
   transition: transform 0.5s ease;
-  color: rgba(2, 168, 66, 0.5); /* สีขาวโปร่งสี */
+  color: rgba(255, 0, 0); 
   text-shadow:
       2px 0 0 #ffffff,    /* เงาด้านขวา */
       -2px 0 0 #ffffff,   /* เงาด้านซ้าย */
@@ -222,11 +222,11 @@ h2.text-black20 {
       0 -1px 0 #ffffff;   /* เงาด้านบน */
 }
 
-.text-black_nav.active  {
+.text-black_nav:hover  {
   font-size: 20px;
   font-weight: bold;
   transition: transform 0.5s ease;
-  color: rgba(255, 255, 255, 0.5); /* สีขาวโปร่งสี */
+  color: rgb(255, 0, 0); 
   text-shadow:
       2px 0 0 #ffffff,    /* เงาด้านขวา */
       -2px 0 0 #ffffff,   /* เงาด้านซ้าย */
@@ -235,6 +235,66 @@ h2.text-black20 {
 }
 
 
+.nav {
+  font-family: 'Titillium Web';
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 600;
+}
+
+.nav * {
+  box-sizing: border-box;
+  transition: all .35s ease;
+}
+
+.nav li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: .5em 1em;
+  paddin: 0;
+}
+
+.nav a {
+  padding: .5em .8em;
+  color: rgba(255,255,255,.5);
+  position: relative;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.nav a::before,
+.nav a::after {
+  content: '';
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  transition: all .35s ease;
+  opacity: 0;
+}
+
+.nav a::before {
+  content: '';
+  right: 0;
+  top: 0;
+  border-top: 3px solid #3E8914;
+  border-right: 3px solid #2E640F;
+  transform: translate(-100%, 50%);
+}
+
+.nav a:after {
+  content: '';
+  left: 0;
+  bottom: 0;
+  border-bottom: 3px solid #2E640F;
+  border-left: 3px solid #3E8914;
+  transform: translate(100%, -50%)
+}
+
+.nav a:hover:before,
+.nav a:hover:after{
+  transform: translate(0,0);
+  opacity: 1;
+}
 
 /* CARD สไลด์ */
 .wrapper {
@@ -281,7 +341,7 @@ h2.text-black20 {
 }
 
 #card1{
-  background-image: url("../Image/spy.jpg");
+  background-image: url("../Image/5adac5141723755.6259250fdf76a.png");
   padding-top: 350px;
   background-size: cover;
   background-position: center; 
@@ -289,7 +349,7 @@ h2.text-black20 {
 }
 
 #card2{
-  background-image: url("../Image/UpcomineEvent.jpg");
+  background-image: url("../Image/532733_051cc1f12ee940c48016b00537b573a8~mv2.webp");
   padding-top: 350px;
   background-size: cover;
   background-position: center; 
@@ -297,7 +357,7 @@ h2.text-black20 {
 }
 
 #card3{
-  background-image: url("../Image/company.jpg");
+  background-image: url("../Image/product-spy-sparkling-fruit-wine_20220916.png");
   padding-top: 350px;
   background-size: cover;
   background-position: center; 
@@ -305,7 +365,7 @@ h2.text-black20 {
 }
 
 #card4{
-  background-image: url("../Image/Vidio.png");
+  background-image: url("../Image/SPY-Angel-Kiss_Blog_Image_Product-Launch_900x1200px_20220817.jpg");
   padding-top: 350px;
   background-size: cover;
   background-position: center; 
@@ -314,7 +374,7 @@ h2.text-black20 {
 
 
 #card5{
-  background-image: url("../Image/Gallery.png");
+  background-image: url("../Image/S1ee99a3f414b4459b94ca06fb76a70bfi.jpg");
   padding-top: 350px;
   background-size: cover;
   background-position: center; 
